--- a/app/src/main/res/menu/menu_movie.xml
+++ b/app/src/main/res/menu/menu_movie.xml
@@ -12,4 +12,10 @@
         android:orderInCategory="100"
         android:title="@string/action_top_rated"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_favorite"
+        android:orderInCategory="200"
+        android:title="@string/action_favorite"
+        app:showAsAction="never" />
 </menu>
