--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -76,6 +76,13 @@
                     app:layout_constraintLeft_toLeftOf="@+id/tv_date"
                     app:layout_constraintTop_toBottomOf="@+id/tv_date" />
 
+                <Button
+                    android:id="@+id/buttonFavorite"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/mark_as_favorite"
+                    android:textColor="@android:color/holo_green_light" />
+
             </LinearLayout>
         </LinearLayout>
 
