--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -80,6 +80,7 @@
                     android:id="@+id/buttonFavorite"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:onClick="OnFavButtonClick"
                     android:text="@string/mark_as_favorite"
                     android:textColor="@android:color/holo_green_light" />
 
